Set svg stroke base style, fix sidebar bottom cutoff

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -73,6 +73,14 @@ layer(base);
     p {
         @apply my-3;
     }
+
+    svg {
+        stroke-linecap: round;
+        stroke-linejoin: round;
+        stroke-dasharray: none;
+        stroke-opacity: 1;
+        fill: none;
+    }
 }
 
 astro-breadcrumbs {
